k8s-cluster-config/apps/blog/base/rollout.yaml
# rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: blog-canary-test
  labels:
    app: blog-canary-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog-canary-test
  template:
    metadata:
      labels:
        app: blog-canary-test
    spec:
      containers:
        - image: git.akmalmaulana.net/akmalm007/blog:abc123
          imagePullPolicy: IfNotPresent
          name: blog
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            failureThreshold: 1
            httpGet:
              port: 80
              path: /
              scheme: HTTP
  strategy:
    blueGreen:
      activeService: blog-active
      previewService: blog-preview
      autoPromotionEnabled: false
