k8s-cluster-config/apps/blog/base/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-preview
spec:
  type: ClusterIP
  selector:
    app: blog-canary-test
  ports:
    - name: http
      port: 80
      targetPort: 80
