k8s-cluster-config/apps/blog/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: production
  name: personal-website
spec:
  type: ClusterIP
  selector:
    app: blog
    akmalmaulana.net/blog: personal-website
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
